add mailer demo

--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@ URI=mongodb://127.0.0.1:27017/userDB
 PORT=8080
 #TOKEN
 SECRET_ACCESS_TOKEN=22a1f6b46aff296d3ee431fba0c04a6be958ef7a
-
+BASE_URL = https://localhost:8080/
 HOST = smtp.gmail.com
 SERVICE = gmail
 EMAIL_PORT = 587
 SECURE = true
 USER = jarunee.recc2@gmail.com
-PASS = hezmnnunczgpkemm
+PASS = qhmudyxtbzczejwi
